crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__second__multiple__range__all.snap
---
source: crates/tools/cron/src/tests/unit/second.rs
expression: result
---
Ok(
    (
        "",
        SecondRule {
            kinds: [
                SecondKind {
                    range: (
                        Second(
                            1,
                        ),
                        Second(
                            59,
                        ),
                    ),
                    periodic: SecondPeriodic(
                        1,
                    ),
                },
                SecondKind {
                    range: (
                        Second(
                            0,
                        ),
                        Second(
                            59,
                        ),
                    ),
                    periodic: SecondPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
